--- a/src/man/mip6d.tmpl
+++ b/src/man/mip6d.tmpl
@@ -1,7 +1,7 @@
 .\" $Id: mip6d.tmpl 1.4 05/05/16 13:13:41+03:00 anttit@tcs.hut.fi $
 .TH mip6d 1 "May 16, 2005" "" "Mobile IPv6 and NEMO Daemon"
 .SH NAME
-mip6d \- UMIP Mobile IPv6 and NEMO Basic Support protocol implementation
+mip6d \- MIPL Mobile IPv6 and NEMO Basic Support protocol implementation
 .SH SYNOPSIS
 .B mip6d [options]
 .sp
@@ -29,16 +29,6 @@ Node is HA
 .IP "\fB\-M, \-\-mobile-node\fP"
 Node is MN
 
-.SH SIGNALS
-
-The following signals can be sent to the daemon:
-.IP "\fB\ SIGHUP\fP"
-Reload the configuration. See
-.BR mip6d.conf (5)
-for information on supported option reload.
-.IP "\fB\ SIGINT, SIGTERM\fP"
-Terminates the daemon operation.
-
 .SH FILES
 
 %etc%/mip6d.conf
@@ -47,12 +37,9 @@ Terminates the daemon operation.
 .BR mip6d.conf (5),
 .BR mipv6 (7),
 .PP
-RFC6275: Mobility Support in IPv6
+RFC3775: Mobility Support in IPv6,
 .PP
 RFC3776: Using IPsec to Protect Mobile IPv6 Signaling Between Mobile
 Nodes and Home Agents
-.PP
-RFC4877: Mobile IPv6 Operation with IKEv2 and the Revised IPsec
-Architecture
 .PP
 RFC3963: Network Mobility (NEMO) Basic Support Protocol
